# tubular-upgrade

./: .clang-format  .gitignore  AGENTS.md  ASTNode.hpp  AUTOTUNER_FEASIBILITY.md  CLAUDE.md  CMakeLists.txt  Control.hpp  DEVELOPMENT_SETUP.md  Makefile  PLAN.md  PROJECT_ISSUES.md  README.md  REFACTOR.md  SPECS.md  TESTING.md  TokenQueue.hpp  Tubular.cpp  build.sh  make  tools.hpp
.depricated/: Makefile
artifacts/research/: aggregated_metrics.json  results_run1.csv  results_run2.csv  results_run3.csv  summary.json  summary_run1.json  summary_run2.json
artifacts/research/batch_runs/: manifest.json
artifacts/research/batch_runs/run1/: results.csv  summary.json
artifacts/research/batch_runs/run2/: results.csv  summary.json
artifacts/research/batch_runs/run3/: results.csv  summary.json
autotuning/: quick.csv  results.csv  run_autotune.py  summary.json
autotuning/config/: default.json
docs/: AUTOTUNING.md  DATA_PIPELINE.md  PROJECT_OVERVIEW.md
docs/figures/: benchmark_features_table.csv  pass_order_means.csv  top_deltas_table.csv
research_tests/: config.json  rt01_fib_recursive.tube  rt02_tail_factorial.tube  rt03_loop_summation.tube  rt04_stride_heavy_loop.tube  rt05_nested_mix.tube  rt06_string_wrapping.tube  rt07_helper_inline.tube  rt08_branchy_loop.tube  rt09_matrix_mix.tube  rt10_control_baseline.tube
scripts/: analyze_research_data.py  collect_data.py  generate_benchmark_features_table.py  repeat_collection.py
src/backend/: WATGenerator.hpp
src/core/: ASTCloner.hpp  ASTNode.hpp  ASTVisitor.hpp  FunctionInliningPass.hpp  LoopUnrollingPass.hpp  NodeCounter.hpp  Pass.hpp  PassManager.hpp  TailRecursionPass.hpp  WATGenerator.hpp
src/frontend/: ASTNode.hpp  TokenQueue.hpp  lexer.hpp
src/middle_end/: FunctionInliningPass.hpp  LoopUnrollingPass.hpp  NodeCounter.hpp  Pass.hpp  PassManager.hpp  SymbolTable.hpp  TailRecursionPass.hpp  Type.hpp
tests/: P3-test-01.wat  P3-test-02.wat  P3-test-03.wat  P3-test-04.wat  P3-test-05.wat  P3-test-06.wat  P3-test-07.wat  P3-test-08.wat  P3-test-09.wat  P3-test-10.wat  P3-test-11.wat  P3-test-12.wat  P3-test-13.wat  P3-test-14.wat  P3-test-15.wat  P3-test-16.wat  P3-test-17.wat  P3-test-18.wat  P3-test-19.wat  P3-test-20.wat  P3-test-21.wat  P3-test-22.wat  P3-test-23.wat  P3-test-24.wat  P3-test-25.wat  P3-test-26.wat  P3-test-27.wat  P3-test-28.wat  P3-test-29.wat  P3-test-30.wat  P3-tester.html  index.html  loop-unrolling-tester.html  run_enhanced_tests.sh  run_tests.sh  test-01.wat  test-02.wat  test-03.wat  test-04.wat  test-05.wat  (+24 more)
tests/benchmarks/: bench-factorial.tube  bench-fib.tube  bench-loop-sum.tube  bench-nested-loop.tube  bench-string-work.tube
tests/function-inlining/: README.md  function-inlining-tester.html  generate_inlining_wasm.sh  inline-perf-01-inline.wasm  inline-perf-01-inline.wat  inline-perf-01-no-inline.wasm  inline-perf-01-no-inline.wat  inline-perf-01.tube  inline-perf-02-inline.wasm  inline-perf-02-inline.wat  inline-perf-02-no-inline.wasm  inline-perf-02.tube  inline-perf-03-inline.wasm  inline-perf-03-no-inline.wat  inline-perf-03.tube  inline-perf-04.tube  inline-perf-05.tube  inline-perf-06.tube  inline-perf-07.tube  inline-perf-08.tube  inline-regression-01.tube  inline-stress-01.tube  inline-test-01.tube  inline-test-01.wasm  inline-test-01.wat  inline-test-02.tube  inline-test-02.wasm  inline-test-02.wat  inline-test-03.tube  inline-test-03.wasm  inline-test-03.wat  inline-test-04.tube  inline-test-04.wasm  inline-test-04.wat  inline-test-05.tube  inline-test-05.wasm  inline-test-05.wat  inline-test-06.tube  inline-test-06.wasm  inline-test-06.wat  (+3 more)
tests/loop-unrolling/: loop-unrolling-tester.html  run_unroll_tests.sh  ultra-01-unroll1.wat  ultra-01-unroll16.wat  ultra-01-unroll4.wat  ultra-01-unroll8.wat  ultra-01.tube  ultra-02-unroll1.wat  ultra-02-unroll16.wat  ultra-02-unroll4.wat  ultra-02-unroll8.wat  ultra-02.tube  ultra-03-unroll1.wat  ultra-03-unroll16.wat  ultra-03-unroll4.wat  ultra-03-unroll8.wat  ultra-03.tube  ultra-04-unroll1.wat  ultra-04-unroll16.wat  ultra-04-unroll4.wat  ultra-04-unroll8.wat  ultra-04.tube  ultra-05.tube  ultra-06.tube  ultra-07.tube  ultra-08.tube
tests/tail-recursion/: run_tail_tests.sh  tail-recursion-tester.html  tail-test-01.tube  tail-test-02.tube  tail-test-03.tube  tail-test-04.tube  tail-test-05.tube  tail-test-accumulator.tube  tail-test-deep-01.tube  tail-test-deep-02.tube  tail-test-deep-03.tube  tail-test-extreme.tube  tail-test-mutual.tube  tail-test-order.tube  tail-test-simple-fib.tube  tail-test-stress-01.tube  tail-test-stress-02.tube  tail-test-stress-03.tube  tail-test-stress-04.tube  tail-test-stress-05.tube
